# Sakaar-NetWork

./: .gitmodules  CMakeLists.txt  main.c
include/: network.h
include/network/: network_client.h  network_conf.h  network_p2p.h  network_server.h
src/network/: network_client.c  network_conf.c  network_p2p.c  network_server.c
